examples/neg/issue548c.effekt
type Box { Wrap[X](x: X) }

def main() = {
  val res = Wrap[Int](5) match {
    case Wrap(y) => // ERROR escape
      val res = y;
      res
  };
  ()
}
